--- a/Xception_transfer_try_again.ipynb
+++ b/Xception_transfer_try_again.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,17 +358,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#keras.backend.clear_session()\n",
-    "#tf.reset_default_graph()"
+    "keras.backend.clear_session()\n",
+    "tf.reset_default_graph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,15 +387,15 @@
     "\n",
     "x= base_model.output\n",
     "x= keras.layers.GlobalAveragePooling2D()(x)\n",
-    "x= keras.layers.Dense(1024, activation=tf.nn.relu,name='first_dense')(x)\n",
+    "x= keras.layers.Dense(1024, activation=tf.nn.relu)(x)\n",
     "x= keras.layers.Dropout(0.7)(x)\n",
-    "x= keras.layers.Dense(1024, activation=tf.nn.relu,name='second_dense')(x)\n",
-    "preds= keras.layers.Dense(1, activation=tf.nn.sigmoid,name='predictor')(x)"
+    "x= keras.layers.Dense(1024, activation=tf.nn.relu)(x)\n",
+    "preds= keras.layers.Dense(1, activation=tf.nn.sigmoid)(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,153 +405,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 input_3\n",
-      "1 block1_conv1\n",
-      "2 block1_conv1_bn\n",
-      "3 block1_conv1_act\n",
-      "4 block1_conv2\n",
-      "5 block1_conv2_bn\n",
-      "6 block1_conv2_act\n",
-      "7 block2_sepconv1\n",
-      "8 block2_sepconv1_bn\n",
-      "9 block2_sepconv2_act\n",
-      "10 block2_sepconv2\n",
-      "11 block2_sepconv2_bn\n",
-      "12 conv2d_8\n",
-      "13 block2_pool\n",
-      "14 batch_normalization_v1_8\n",
-      "15 add_24\n",
-      "16 block3_sepconv1_act\n",
-      "17 block3_sepconv1\n",
-      "18 block3_sepconv1_bn\n",
-      "19 block3_sepconv2_act\n",
-      "20 block3_sepconv2\n",
-      "21 block3_sepconv2_bn\n",
-      "22 conv2d_9\n",
-      "23 block3_pool\n",
-      "24 batch_normalization_v1_9\n",
-      "25 add_25\n",
-      "26 block4_sepconv1_act\n",
-      "27 block4_sepconv1\n",
-      "28 block4_sepconv1_bn\n",
-      "29 block4_sepconv2_act\n",
-      "30 block4_sepconv2\n",
-      "31 block4_sepconv2_bn\n",
-      "32 conv2d_10\n",
-      "33 block4_pool\n",
-      "34 batch_normalization_v1_10\n",
-      "35 add_26\n",
-      "36 block5_sepconv1_act\n",
-      "37 block5_sepconv1\n",
-      "38 block5_sepconv1_bn\n",
-      "39 block5_sepconv2_act\n",
-      "40 block5_sepconv2\n",
-      "41 block5_sepconv2_bn\n",
-      "42 block5_sepconv3_act\n",
-      "43 block5_sepconv3\n",
-      "44 block5_sepconv3_bn\n",
-      "45 add_27\n",
-      "46 block6_sepconv1_act\n",
-      "47 block6_sepconv1\n",
-      "48 block6_sepconv1_bn\n",
-      "49 block6_sepconv2_act\n",
-      "50 block6_sepconv2\n",
-      "51 block6_sepconv2_bn\n",
-      "52 block6_sepconv3_act\n",
-      "53 block6_sepconv3\n",
-      "54 block6_sepconv3_bn\n",
-      "55 add_28\n",
-      "56 block7_sepconv1_act\n",
-      "57 block7_sepconv1\n",
-      "58 block7_sepconv1_bn\n",
-      "59 block7_sepconv2_act\n",
-      "60 block7_sepconv2\n",
-      "61 block7_sepconv2_bn\n",
-      "62 block7_sepconv3_act\n",
-      "63 block7_sepconv3\n",
-      "64 block7_sepconv3_bn\n",
-      "65 add_29\n",
-      "66 block8_sepconv1_act\n",
-      "67 block8_sepconv1\n",
-      "68 block8_sepconv1_bn\n",
-      "69 block8_sepconv2_act\n",
-      "70 block8_sepconv2\n",
-      "71 block8_sepconv2_bn\n",
-      "72 block8_sepconv3_act\n",
-      "73 block8_sepconv3\n",
-      "74 block8_sepconv3_bn\n",
-      "75 add_30\n",
-      "76 block9_sepconv1_act\n",
-      "77 block9_sepconv1\n",
-      "78 block9_sepconv1_bn\n",
-      "79 block9_sepconv2_act\n",
-      "80 block9_sepconv2\n",
-      "81 block9_sepconv2_bn\n",
-      "82 block9_sepconv3_act\n",
-      "83 block9_sepconv3\n",
-      "84 block9_sepconv3_bn\n",
-      "85 add_31\n",
-      "86 block10_sepconv1_act\n",
-      "87 block10_sepconv1\n",
-      "88 block10_sepconv1_bn\n",
-      "89 block10_sepconv2_act\n",
-      "90 block10_sepconv2\n",
-      "91 block10_sepconv2_bn\n",
-      "92 block10_sepconv3_act\n",
-      "93 block10_sepconv3\n",
-      "94 block10_sepconv3_bn\n",
-      "95 add_32\n",
-      "96 block11_sepconv1_act\n",
-      "97 block11_sepconv1\n",
-      "98 block11_sepconv1_bn\n",
-      "99 block11_sepconv2_act\n",
-      "100 block11_sepconv2\n",
-      "101 block11_sepconv2_bn\n",
-      "102 block11_sepconv3_act\n",
-      "103 block11_sepconv3\n",
-      "104 block11_sepconv3_bn\n",
-      "105 add_33\n",
-      "106 block12_sepconv1_act\n",
-      "107 block12_sepconv1\n",
-      "108 block12_sepconv1_bn\n",
-      "109 block12_sepconv2_act\n",
-      "110 block12_sepconv2\n",
-      "111 block12_sepconv2_bn\n",
-      "112 block12_sepconv3_act\n",
-      "113 block12_sepconv3\n",
-      "114 block12_sepconv3_bn\n",
-      "115 add_34\n",
-      "116 block13_sepconv1_act\n",
-      "117 block13_sepconv1\n",
-      "118 block13_sepconv1_bn\n",
-      "119 block13_sepconv2_act\n",
-      "120 block13_sepconv2\n",
-      "121 block13_sepconv2_bn\n",
-      "122 conv2d_11\n",
-      "123 block13_pool\n",
-      "124 batch_normalization_v1_11\n",
-      "125 add_35\n",
-      "126 block14_sepconv1\n",
-      "127 block14_sepconv1_bn\n",
-      "128 block14_sepconv1_act\n",
-      "129 block14_sepconv2\n",
-      "130 block14_sepconv2_bn\n",
-      "131 block14_sepconv2_act\n",
-      "132 global_average_pooling2d_2\n",
-      "133 first_dense\n",
-      "134 dropout_2\n",
-      "135 second_dense\n",
-      "136 predictor\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#for i,layer in enumerate(model.layers):\n",
     "#    print(i,layer.name)"
@@ -559,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,25 +467,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Model' object has no attribute 'total_loss'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-91-5834153c2f1f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m                     \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mvalidation_generator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                     \u001b[0mvalidation_steps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mval_steps_to_take\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m                     verbose=2)\n\u001b[0m\u001b[0;32m      7\u001b[0m                     \u001b[1;31m#callbacks=[tensorboard_callback])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[1;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[0;32m   1424\u001b[0m         \u001b[0muse_multiprocessing\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1425\u001b[0m         \u001b[0mshuffle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1426\u001b[1;33m         initial_epoch=initial_epoch)\n\u001b[0m\u001b[0;32m   1427\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1428\u001b[0m   def evaluate_generator(self,\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training_generator.py\u001b[0m in \u001b[0;36mmodel_iteration\u001b[1;34m(model, data, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch, mode, batch_size, **kwargs)\u001b[0m\n\u001b[0;32m    123\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    124\u001b[0m   batch_function = _make_execution_function(\n\u001b[1;32m--> 125\u001b[1;33m       model, mode, class_weight=class_weight)\n\u001b[0m\u001b[0;32m    126\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    127\u001b[0m   \u001b[1;31m# Create the queue for the generator.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training_generator.py\u001b[0m in \u001b[0;36m_make_execution_function\u001b[1;34m(model, mode, class_weight)\u001b[0m\n\u001b[0;32m    425\u001b[0m   \u001b[1;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'train'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    426\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcontext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecuting_eagerly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 427\u001b[1;33m       \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_fit_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    428\u001b[0m     \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunctools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpartial\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_on_batch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    429\u001b[0m   \u001b[1;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'test'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_make_fit_function\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1924\u001b[0m     ]\n\u001b[0;32m   1925\u001b[0m     self._make_train_function_helper(\n\u001b[1;32m-> 1926\u001b[1;33m         '_fit_function', [self.total_loss] + metrics_tensors)\n\u001b[0m\u001b[0;32m   1927\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1928\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m_make_test_function_helper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfn_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmetric_updates\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Model' object has no attribute 'total_loss'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#define an optimizer, loss, and accuracy metric.\n",
+    "adam = tf.keras.optimizers.Adam(1e-3)\n",
+    "model.compile(optimizer=adam, loss=keras.losses.binary_crossentropy,metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "hist = model.fit_generator(generator=training_generator,\n",
     "                    steps_per_epoch=steps_to_take, \n",
